started top-wrap banner coding in faqs, now showing correctly

--- a/source/assets/stylesheets/global.scss
+++ b/source/assets/stylesheets/global.scss
@@ -128,7 +128,7 @@ body {
     /* appearance */
     background-color: $text-gray;
     color: #FFFFFF;
-    font-size: 10pt;
+    font-size: 9pt;
     transition: all 250ms linear;
     font-family: 'Lucida Grande';
     text-transform: uppercase;
